--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,4 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/blue_sky</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_apps</item>
+        <item name="postSplashScreenTheme">@style/Theme.KeBali</item>
+    </style>
 </resources>
